2016-01-26  Per Bothner  <per@bothner.com>

	* Shell.java (run): We can simplify skipping to end-of-line,
	since parse does that.

2015-12-16  Per Bothner  <per@bothner.com>

	* repl.java: Remove --domterm flag.
	Use CheckConsole.getDomTermVersionInfo instead,

2015-11-27  Per Bothner  <per@bothner.com>

	* repl.java: Preliminary support for --domterm flag.

2015-10-24  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (getTypeMap): Add 'parameter'.

2015-10-13  Per Bothner  <per@bothner.com>

	Clearer definition of "interactive mode".  Better re-definition support.
	* lang/Eval.java (evalBody): Set module to be interactive
	if the environment is the interactive environment.
	* standard/require.java (importDefinition): Set module to be
	interactive if current module is interactive.

2015-10-12  Per Bothner  <per@bothner.com>

	* standard/require.java (lookupModuleFromSourcePath): Don't resolve
	against baseName if latter is <string> or <eval>.
	* lang/Eval.java (evalForm$X): Use InPort.evalPathname.

2015-10-11  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java: Check for null sourcepath.
	* standard/Include.java: Likewise.

2015-10-10  Per Bothner  <per@bothner.com>

	* Shell.java (checkCompiledZip): Use new Path#toFile.
	* standard/Include.java (process): Use new Path#isPlainFile.
	* standard/ImportFromLibrary.java (handleImport): Likewise.

2015-10-05  Per Bothner  <per@bothner.com>

	* standard/require.java (importDefinitions): Remove unused local 'now'.

	* standard/ImportFromLibrary.java (handleImport):
	Don't add useless "./" prefix.
	Canonicalize path before calling findWithSourcePath.

2015-09-30  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (SRFI97Map): Add SRFI 37
	and name it "args-fold", even though it is not supported by SRFI 97.

	* standard/ImportFromLibrary.java: Use demangleSymbolic.

2015-09-29  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java: Allow class name, written as